Done, to be tested:
---------------------------
* FIX: SuRun /RunAs does not get the elevated token of UAC admins any more

ToDo
---------------------
* Support for "RunAs" in LNK files!
* GUI for SwitchToUser
* Console SuRun support
* Create a "Default" SuRunner for users that are not in "SuRunners"
* Checksums for "Always Yes" programs
* Windows 7 compatibility
  Explorer is started via DCOM explorer.exe /FACTORY,{...
* LOG-File for SuRun activity

To be done in future:
---------------------
* Use Radio-Buttons for (normal/elevated) Auto-Magic
* Hide/Show all context menu entries consistently
* make all context menu entries dynamically with ShellExt 
  (E.g.: msi with popup-menu)

Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.0.9 Beta 3 - 2009-10-06
---------------------------------
* CHG: SuRun handles RunAs verb for ShellExecute/~Ex when "Replace RunAs with 
    SuRuns RunAs" is activated (Windows 5 only!)

SuRun 1.2.0.9 Beta 2 - 2009-10-09
---------------------------------
* NEW: SuRun remembers the last /RunAs user
* CHG: SuRuns Installer sets the focus to "Logoff"/"Restart" after Installation

SuRun 1.2.0.9 Beta 1 - 2009-10-09
---------------------------------
* CHG: On Windows 7 SuRun does not support and Display "Start as Administrator"
    on the control panel and the recycle bin. Also SuRun does not display 
    "(Re)start as Administrator" in Explorer's system menu
* FIX: HideAppStartCursor() caused InstallSuRun on Win7 with Aero to terminate

SuRun 1.2.0.8 - 2009-09-23
--------------------------
* renamed SuRun 1.2.0.8 Beta 1 to SuRun 1.2.0.8

SuRun 1.2.0.8 Beta 1 - 2009-09-22